# Hexacraft

./: .gitattributes  .gitignore  .gitlab-ci.yml  .scalafmt.conf  .travis.yml  Bakgrundsbild i launchern2.0.png.import  CONTRIBUTING.md  GameVersion.gd  Hexacraft Launcher.pck  LICENSE  README.md  Taskfile.yml  Verdana.ttf.import  VersionList.gd  VersionListItem.gd  VersionListItem.tscn  Versions.gd  Window.gd  Window.tscn  build.mill  build.sbt  default_env.tres  deps.mill  export_presets.cfg  icon.png.import  icon_2d_big.png.import  icon_3d_big.png.import  main_theme.tres  play_button_style.tres  project.godot  util.mill
.github/workflows/: ci.yml  (+3 more)
.import/: Bakgrundsbild i launchern.png-3c7603a7d88df4a6cdbcc443398b5424.md5  Bakgrundsbild i launchern2.0.png-8210d112ce64ea8205615a57672407a9.md5  Bakgrundsbild i launchern2.0.png-8210d112ce64ea8205615a57672407a9.stex  background.png-98289422cd7d93003950872a7b97021f.md5  background.png-98289422cd7d93003950872a7b97021f.stex  button_focus.png-0a50fcfc61c2d12bdc3066c079b16efe.md5  button_focus.png-0a50fcfc61c2d12bdc3066c079b16efe.stex  button_normal.png-4610ade9d9b8fef5d6ad0404da548499.md5  button_normal.png-4610ade9d9b8fef5d6ad0404da548499.stex  button_pressed.png-2e3e715553c6de24508b0904dd63c1b3.md5  button_pressed.png-2e3e715553c6de24508b0904dd63c1b3.stex  icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex  icon_2d_big.png-66af80b41df5b14ec63d782610b10142.md5  icon_2d_big.png-66af80b41df5b14ec63d782610b10142.stex  icon_3d_big.png-f906e6fa403cc9bf0aa7bf29a63327f3.md5  icon_3d_big.png-f906e6fa403cc9bf0aa7bf29a63327f3.stex
launcher/: Cargo.toml  Taskfile.yml  build.rs
launcher/packaging/macos/: Info.plist
launcher/src/: cmd.rs  core.rs  handler.rs  lib.rs  main.rs  net.rs  registry.rs  ui.rs
launcher/src/ui/: actions.rs  elements.rs  messages.rs  mod.rs
launcher/tests/: e2e.rs
project/: Dependencies.scala  plugins.sbt
(+1673 files in other folders)
