[package]
name = "launcher"
version = "0.1.0"
edition = "2021"
description = "A launcher for the Hexacraft game"

[dependencies]
anyhow = "1.0.79"
futures-lite = "2.6.0"
platform-dirs = "0.3.0"
serde = "1.0.195"
serde_json = "1.0.111"
ureq = "2.9.1"
zip-extract = "0.1.3"
async-channel = "2.3.1"

[dependencies.bevy]
version = "0.14.2"
default-features = false
features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_ui",
    "bevy_winit",
    "png",
    "multi_threaded",
]

[package.metadata.bundle]
name = "HexacraftLauncher"
identifier = "com.martomate.hexacraft.launcher"
icon = ["./target/packaging/icons/icon_*.png"]
resources = ['assets']
