[package]
name = "launcher"
edition = "2024"
description = "A launcher for the Hexacraft game"

[[bin]]
name = "Hexacraft"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
platform-dirs = "0.3.0"
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.69"
ureq = "2.9.1"
zip-extract = "0.1.3"

[dependencies.bevy]
version = "0.14.2"
default-features = false
features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "png",
    "x11",
]

[build-dependencies]
embed-resource = "3.0"
