[package]
name = "launcher"
edition = "2024"
description = "A launcher for the Hexacraft game"

[[bin]]
name = "Hexacraft"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
facet = "0.41.0"
facet-json = "0.41.0"
platform-dirs = "0.3.0"
thiserror = "1.0.69"
ureq = "3.1.4"
zip-extract = "0.1.3"

[dependencies.bevy]
version = "0.15"
default-features = false
features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "png",
    "x11",
]

[build-dependencies]
embed-resource = "3.0"

[dev-dependencies]
facet-value = "0.41.0"
